footer misaligned fix

--- a/lms/static/sass/_overrides-lms-main-css.scss
+++ b/lms/static/sass/_overrides-lms-main-css.scss
@@ -1,13 +1,15 @@
 @import '/edx/app/edxapp/edx-platform/node_modules/edx-pattern-library/node_modules/susy/sass/susy';
 // //index page
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:700,300,400,600");
-*{
+* {
     outline: 0;
 }
+
 h1 {
     font-family: "Georgia" !important;
     font-style: italic !important;
 }
+
 h2 {
     font-family: 'Source Sans Pro', sans-serif !important;
     font-weight: 300 !important;
@@ -91,28 +93,12 @@ p {
     text-transform: uppercase !important;
 }
 
-html {
-    height: 100%;
+body {
     background: url("../images/course-search.jpg") no-repeat center center fixed !important;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    @include susy-media($bp-screen-lg,
-    $susy) {
-        height: auto;
-        background: none;
-    }
-}
-
-body {
-    @include span(full) {
-        background: url("../images/course-search.jpg") no-repeat center center fixed !important;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-    }
 }
 
 header.global {
@@ -156,16 +142,18 @@ header.global {
         }
         .nav-colophon {
             @include span-columns(4);
+            padding-left: $baseline*2.5;
+            box-sizing: border-box;
             .copyright {
                 color: $white !important;
                 text-align: center;
             }
             ol {
                 text-align: center;
-                margin-bottom: 20px;
+                margin-bottom: $baseline;
                 li {
                     display: inline;
-                    margin-right: 20px;
+                    margin-right: $baseline;
                     a {
                         color: white !important;
                     }
@@ -173,6 +161,7 @@ header.global {
             }
             @media screen and (max-width: 768px) {
                 @include fill-parent();
+                padding-left: 0;
                 .copyright {
                     text-align: left;
                     margin-left: $baseline;
@@ -184,15 +173,14 @@ header.global {
             }
         }
         .footer-about-openedx1 {
-            p {
-                @include float(right);
-            }
             @include span-columns(4);
+            float: right;
+            text-align: right;
             @media screen and (max-width: 768px) {
                 @include fill-parent();
                 p {
                     float: left;
-                    margin-left: $baseline;
+                    margin-left: $baseline/2;
                 }
             }
         }
@@ -209,7 +197,7 @@ header.global {
 
 .xmodule_display.xmodule_SequenceModule {
     .sequence-nav {
-    //display: none;
+        //display: none;
         .sequence-list-wrapper {
             background-color: none;
             background-image: none;
@@ -218,8 +206,7 @@ header.global {
             height: 44px;
             margin: 0;
             box-shadow: none;
-
-            .nav-item{
+            .nav-item {
                 margin: 0;
                 padding: 9px 0 7px 45px;
             }
