--- a/lms/static/sass/course/courseware/_sidebar.scss
+++ b/lms/static/sass/course/courseware/_sidebar.scss
@@ -129,6 +129,7 @@
 
                             h6{
                                 font-size: 12px;
+                                margin: 0;
                             }
 
                             p {
